# SDK

./: CMakeLists.txt  README.md  build_and_test.sh
example/: json_init_example.hpp  json_node_example.cpp  logger_example.cpp  memory_manager_example.cpp  scheduler_example.cpp  scheduler_example_graph.cpp  test_generated.cpp
include/: json_init_generator.hpp  json_node.hpp  logger.hpp  memory_manager.hpp  object.hpp  scheduler.hpp  task.hpp
src/: json_init_generator.cpp  json_init_generator_main.cpp  json_node.cpp  logger.cpp  memory_manager.cpp  object.cpp  scheduler.cpp
